--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myntra shopping site</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Shopping-site/CSS/style.css">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" /> -->
      
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div id="logo_container">
-            <a href="#"><img src="/images/logoOfC.png" alt="logo" class="chandrika"></a>
+            <a href="#"><img src="/Shopping-site/images/logoOfC.png" alt="logo" class="chandrika"></a>
         </div>
         <nav id="navigation">
             <a href="#">Home</a>
@@ -23,21 +23,21 @@
             <a href="#">Studio<sup class="super">New</sup></a>
         </nav>
         <div id="search_bar">
-            <a href="#" class="search"><img src="/images/search.png" alt="search_bar" class="search_icon"></a>
+            <a href="#" class="search"><img src="/Shopping-site/images/search.png" alt="search_bar" class="search_icon"></a>
             <input class="search_input" placeholder="         search for products, brands and more" >      
         </div>
         <div id="action_bar">
             
             <span class="profile">
-                <div><img src="/images/user.png" class="profilepic" alt=""></div>
+                <div><img src="/Shopping-site/images/user.png" class="profilepic" alt=""></div>
                 Profile
             </span>
             <span class="shop_bag">
-                <div><img src="/images/bag.png" class="bag" alt=""></div>
+                <div><img src="/Shopping-site/images/bag.png" class="bag" alt=""></div>
                 Bag
             </span>
             <span class="heat">
-                <div><img src="/images/wishlist1.png" class="wishlist" alt=""></div>
+                <div><img src="/Shopping-site/images/wishlist1.png" class="wishlist" alt=""></div>
                 wishlist
             </span>
         </div>
@@ -94,8 +94,8 @@
         <hr>
     </footer>
 
-    <script src="/data/items.js"></script>
-    <script src="/script/index.js">
+    <script src="/Shopping-site/data/items.js"></script>
+    <script src="/Shopping-site/data/script/index.js">
 
     </script>
 </body>
