--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,13 +14,14 @@
         <div id="logo_container">
             <a href="#"><img src="/Shopping-site/images/logoOfC.png" alt="logo" class="chandrika"></a>
         </div>
-        <nav id="navigation">
+        <nav id="navigation" class="nav-links">
             <a href="#">Home</a>
             <a href="#">Men</a>
             <a href="#">Woman</a>
             <a href="#">Kids</a>
             <a href="#">Beauty</a>
             <a href="#">Studio<sup class="super">New</sup></a>
+            <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         </nav>
         <div id="search_bar">
             <a href="#" class="search"><img src="/Shopping-site/images/search.png" alt="search_bar" class="search_icon"></a>
